# dual-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: adding_problems.md  analysis.md  api.md  quickstart.md  references.md  runner.md
examples/: basic_usage.py  custom_problem.py  epsilon_annealing.py  reproduce_paper_a.py
src/dual_bench/: __init__.py  formulations.py  runner.py  schedules.py
src/dual_bench/analysis/: __init__.py  metrics.py  statistics.py  tables.py
src/dual_bench/engines/: __init__.py  base.py  platypus_engine.py  pymoo_engine.py
src/dual_bench/problems/: __init__.py  base.py  suites.py
src/dual_bench/problems/cmop/: __init__.py  classic.py  lircmop.py  pymoo_bridge.py
src/dual_bench/problems/constrained/: __init__.py  cantilever.py  pressure_vessel.py  speed_reducer.py  spring.py  welded_beam.py
src/dual_bench/references/: __init__.py  optima.py  paper_a.py
tests/: test_analysis.py  test_engines.py  test_formulations.py  test_problems.py  test_references.py  test_runner.py  test_schedules.py  test_suites.py
