[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-bench"
version = "1.1.0"
description = "Benchmark library for constrained optimization via demand-to-capacity ratios"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Jesus A. Torrecilla-Pinero", email = "jtorreci@unex.es" },
    { name = "Jose M. Ceballos-Martinez", email = "jmceba@unex.es" },
    { name = "Juan Antonio Gomez Pulido", email = "jangomez@unex.es" },
]
keywords = [
    "optimization",
    "benchmark",
    "constrained",
    "multi-objective",
    "demand-capacity",
    "MOEA",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
pymoo = ["pymoo>=0.6"]
platypus = ["platypus-opt>=1.1"]
analysis = ["scipy>=1.7"]
all = ["pymoo>=0.6", "platypus-opt>=1.1", "scipy>=1.7"]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[project.urls]
Repository = "https://github.com/jtorreci/dual-bench"
Documentation = "https://github.com/jtorreci/dual-bench#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run optimization (deselect with '-m \"not slow\"')",
]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["dual_bench"]

[tool.coverage.report]
show_missing = true
fail_under = 90
